fix(styling): show scroll bar in EntryDetailPage only when content is overflowing

--- a/src/components/App.styl
+++ b/src/components/App.styl
@@ -395,15 +395,18 @@ button.pure-button i
         .result
           box-sizing      border-box
           padding-bottom  30px
+          overflow        auto
 
         .content-above-buttons
           overflow-y      scroll
+          overflow        auto
           height          calc(100vh - 42px)
           box-sizing      border-box
           padding-bottom  30px
 
         .content
           overflow-y      scroll
+          overflow        auto
           height          100vh
           box-sizing      border-box
           padding-bottom  30px
